--- a/assets/style.css
+++ b/assets/style.css
@@ -10,20 +10,20 @@ section {
     text-align: center;
 }
 
-ul {
-    list-style-type: none;
-}
-
-li {
-    margin: 5px;
-    padding: 5px;
-    font-size: 16px;
-    border: 2px;
-    border-style: solid;
-}
-
 #timer {
     text-align: right;
     font-weight: 700;
     font-size: 24px;
 }
+
+h1, h2, h3, h4, h5, h6, p {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+button {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 14px;
+    color: white;
+    background-image: linear-gradient(blue, rgb(1, 154, 255));
+}
+
